# CatNote

./: .gitignore  CMakeLists.txt  README.md
src/: BaseWindow.cpp  BaseWindow.h  Button.cpp  Button.h  DesignSystem.cpp  DesignSystem.h  EditorTabBar.cpp  EditorTabBar.h  FramelessHelper.cpp  FramelessHelper.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  MaskWidget.cpp  MaskWidget.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  Note.qrc  NoteWindow.cpp  NoteWindow.h  Ripple.cpp  Ripple.h  SettingsDialog.cpp  SettingsDialog.h  StyleSheet.h  ThemeSwitcher.cpp  ThemeSwitcher.h  TitleBar.cpp  TitleBar.h  TransparentMask.cpp  TransparentMask.h  main.cpp
